@@ -1,5 +1,9 @@
 2007-04-12 Eitan Isaacson  <eitan@ascender.com>
 
+	* Makefile.am: Added uninstall gconf schema section (bug 429097).
+
+2007-04-12 Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/event_monitor.glade: Changed mnemonics to remove duplicates.
 	* plugins/interface_view.glade: Removed expander mnemonics will be
 	fixed with bug 429132. Changed mnemonics to remove duplicates.
